[gd_scene load_steps=3 format=3 uid="uid://cqe2wp7bbaie2"]

[ext_resource type="Script" path="res://scripts/side_menu_background.gd" id="1_ib3a6"]
[ext_resource type="Script" path="res://scripts/side_menu.gd" id="1_qt2yi"]

[node name="SideMenu" type="Node2D"]
script = ExtResource("1_qt2yi")

[node name="Sprite2D" type="Sprite2D" parent="."]
centered = false
script = ExtResource("1_ib3a6")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 47.0
offset_bottom = 47.0
columns = 4

[node name="GreenButton" type="Button" parent="GridContainer"]
layout_mode = 2

[node name="BlueButton" type="Button" parent="GridContainer"]
layout_mode = 2

[node name="RedButton" type="Button" parent="GridContainer"]
layout_mode = 2
